# simple-mockforce

./: .gitignore  LICENSE  README.md  pyproject.toml  release.ps1
.github/workflows/: publish.yml  test.yml
simple_mockforce/: __init__.py  biz_logic.py  callbacks.py  constants.py  core.py  error_codes.py  mock.py  patch_constants.py  query.py  salesforce.py  state.py  utils.py  virtual.py
simple_mockforce/query_algorithms/: __init__.py  date_token.py  order_by.py  parent_attrs.py  where.py
tests/: relations.json  test_bulk.py  test_crud.py  test_query.py  test_responses.py  test_simple_mockforce.py  test_utils.py  utils.py
